codeserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: codeserver
  selector:
    app: codeserver
    part-of: codeserver
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
